# band-std-reference-contracts-cosmwasm

./: .gitignore  Cargo.toml  README.md
contracts/std-reference/: Cargo.toml
contracts/std-reference-basic/: Cargo.toml
contracts/std-reference-basic/schema/: query_msg.json
contracts/std-reference-basic/src/: contract.rs  msg.rs  state.rs  struct_types.rs
contracts/std-reference-proxy/: Cargo.toml
contracts/std-reference-proxy/examples/: schema.rs
contracts/std-reference-proxy/schema/: execute_msg.json  instantiate_msg.json  query_msg.json
contracts/std-reference-proxy/src/: contract.rs  msg.rs  state.rs  struct_types.rs
contracts/std-reference/schema/: execute_msg.json  ref_data.json  reference_data.json
contracts/std-reference/src/: contract.rs  msg.rs  state.rs
std_reference_basic/: Cargo.toml
std_reference_basic/examples/: schema.rs
std_reference_basic/schema/: execute_msg.json  query_msg.json
std_reference_basic/src/: contract.rs  msg.rs  state.rs  struct_types.rs
std_reference_proxy/: Cargo.toml
std_reference_proxy/src/: contract.rs  msg.rs  state.rs  struct_types.rs
