[package]
name = "std-reference-basic"
version = "0.1.0"
authors = ["bandprotocol"]
edition = "2018"

exclude = [
    "contract.wasm",
    "hash.txt",
]

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
backtraces = ["cosmwasm-std/backtraces"]
library = []

[dependencies]
cosmwasm-std = { version = "1.0.0" }
cw-storage-plus = { version = "0.14.0" }
schemars = "0.8.8"
serde = { version = "1.0.137", default-features = false, features = ["derive"] }
bincode = "1.3.3"
serde_json = "1.0.81"
snafu = { version = "0.7.1" }

[dev-dependencies]
cosmwasm-schema = { version = "1.0.0" }
