[package]
authors = ["bandprotocol"]
edition = "2018"
name = "std-reference-basic"
version = "0.1.0"

exclude = [
  "contract.wasm",
  "hash.txt",
]

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
incremental = false
lto = true
opt-level = 3
overflow-checks = true
panic = 'abort'
rpath = false

[features]
backtraces = ["cosmwasm-std/backtraces"]
library = []

[dependencies]
cosmwasm-std = {version = "1.0.0"}
cw-storage-plus = {version = "0.14.0"}
schemars = "0.8.8"
serde = {version = "1.0.137", default-features = false, features = ["derive"]}
serde_json = "1.0.81"

[dev-dependencies]
cosmwasm-schema = {version = "1.0.0"}
